--- a/css/style.css
+++ b/css/style.css
@@ -1,124 +1,224 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 *{
     margin: 0;
     padding: 0;
 }
 
-body{
-    background: url("https://images.unsplash.com/photo-1475257026007-0753d5429e10?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+html{
+    scroll-behavior: smooth;
+}
+
+.navbar{
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    position: sticky;
+    top: 0;
+    cursor: pointer;
 }
 
-h1{
-    color: white;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-P{
-    color: #C5C6C7;
-}
-
-.name{
-    color: #66FCF1;
-}
-
-.headline{
-    color: white;
-}
-
-.container{
+.logo{
+    width: 20%;
     display: flex;
-    flex-wrap: wrap;
-}
-
-.intro{
-    margin-top: 20px;
-    display: flex;
-    align-items: baseline;
-}
-
-.intro, .about, .featured, .experience{
-    width: 60vw;
-    margin-bottom: 10px;
-    background: #1F2833;
-    border-radius: 5px;
-}
-
-.intro p, .about p{
-    margin-bottom: 10px;
-}
-
-.profile img{
-    border: 4px solid #45A29E;
-    border-radius: 100px;
-    margin: 10px 20px;
-}
-
-.right{
-    margin-left: 200px;
-}
-
-.current, .education{
-    display: flex;
+    justify-content: center;
     align-items: center;
 }
 
-.current img, .education img{
-    width: 10%;
-}
-
-h1, p{
-    margin-left: 20px;
-    margin-right: 20px;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.container{
-    display: flex;
-    justify-content: center;
-    padding: 10px 0;
-}
-
-.featuredItem{
-    display: flex;
-    flex-direction: column;
-    border: 2px solid #45A29E;
-    border-radius: 7.5px;
-    max-width: 250px;
+.logo img{
+    width: 26%;
+    border: 3px solid white;
+    border-radius: 50px;
     margin: 5px;
-    background: white;
 }
 
-.featuredItem img{
-    object-fit: contain;
-    margin-top: 20px;
-    height: 150px;
-}
-
-.bold{
-    font-weight: bold;
-    color: #0B0C10;
-}
-
-.experienceItem{
-    margin: 20px;
-}
-
-.experienceItem ul, li{
-    margin: 20px;
-}
-
-.company{
+.nav-list{
+    width: 70%;
+    /* background-color: black; */
     display: flex;
+    align-items: center;
 }
 
-.company img{
-    width: 5%;
-    height: 5%;
+.nav-list li{
+    list-style: none;
+    padding: 26px 30px;
 }
 
+.nav-list li a{
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.nav-list li a:hover{
+    color: grey;
+}
+
+.rightNav{
+    /* background-color: blueviolet; */
+    width: 30%;
+    text-align: right;
+    padding: 0 23px;
+}
+
+#search{
+    padding: 5px;
+    font-size: 17px;
+    border: 2px solid grey;
+    border-radius: 9px;
+}
+
+.background{
+    background: rgba(0, 0, 0, 0.7) url('../img/bg.jpg');
+    background-size: cover;
+    background-blend-mode: darken;
+}
+
+.firstSection{
+    height: 100vh;
+}
+
+.box-main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 50%;
+    margin: auto;
+    height: 80%;
+}
+
+.firstHalf{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.secondHalf{
+    width: 30%;
+}
+
+.secondHalf img{
+    width: 70%;
+    border: 4px solid white;
+    border-radius: 150px;
+    display: block;
+    margin: auto;
+}
+
+.text-big{
+    font-size: 41px;
+}
+
+.text-small{
+    font-size: 18px;
+}
+
+.btn{
+    padding: 8px 20px;
+    margin: 7px 3px;
+    border: 2px solid white;
+    border-radius: 8px;
+    color: white;
+    background: none;
+    cursor: pointer;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.btn-sm{
+    padding: 6px 10px;
+    vertical-align: middle;
+    font-size: 16px;
+}
+
+.btn-dark{
+    color: black;
+    border: 2px solid grey
+}
+
+.section{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    max-width: 85%;
+    margin: auto;
+    font-family: 'Ubuntu', sans-serif;
+    padding: 10px;
+}
+
+.section-left{
+    flex-direction: row-reverse;
+}
+
+.paras{
+    padding: 0 65px;
+}
+
+.sectionTag{
+    padding: 16px 0;
+}
+
+.sectionSubTag{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.thumbnail img{
+    width: 250px;
+    border: 2px solid black;
+    border-radius: 26px;
+    margin-top: 19px;
+}
+
+.contact{
+    background-color: #f6f5f4;
+    height: 833px;
+}
+
+.text-center{
+    text-align: center;
+    padding-top: 20px;
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 35px;
+}
+
+.form{
+    max-width: 62%;
+    margin: 25px auto;
+}
+
+.form-input{
+    width: 100%;
+    font-size: 19px;
+    border: 2px solid grey;
+    border-radius: 6px;
+    margin: 14px 0;
+    padding: 5px 13px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.text-footer{
+    text-align: center;
+    padding: 20px 0;
+    font-family: 'Ubuntu', sans-serif;
+    display: flex;
+    justify-content: center;
+    color: white;
+}
+
+.burger{
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 15px;
+}
+
+.line{
+    width: 33px;
+    background-color: white;
+    height: 4px;
+    margin: 5px 3px;
+}
