--- a/style.css
+++ b/style.css
@@ -106,38 +106,37 @@ h1, p{
 }
 
 .experienceItem{
-    margin: 20px;
-}
-
-.experienceItem ul{
-    margin: 20px;
-}
-
-.experienceItem li{
-    position: relative;
-    margin: 20px;
-}
-
-.not-last::before{
-    width: 2px;
-    background-color: #C5C6C7;
-    content: '';
-    position: absolute;
-    top: 25px;
-    bottom: -30px;
-    left: -21px;
-}
-
-.experienceItem li::marker{
-    font-size: 30px;
-    color: #C5C6C7;
-}
-
-.company{
     display: flex;
+    flex-direction: column;
 }
 
-.company img{
+.company, .role{
+    display: flex;
+    align-items: center;
+}
+
+.details{
+    margin-bottom: 10px;
+}
+
+.logo{
     width: 5%;
     height: 5%;
+    margin: auto 30px;
+}
+
+.line{
+    width: 45px;
+    border: 1px solid #C5C6C7;
+    position: absolute;
+}
+
+.circle{
+    height: 10px;
+    width: 10px;
+    border: 1px solid #C5C6C7;
+    background-color: #C5C6C7;
+    border-radius: 100px;
+    margin: auto 45px;
+    position: relative;
 }
