--- a/responsive.css
+++ b/responsive.css
@@ -1,6 +1,10 @@
-@media (max-width: 1024px){
+@media (max-width: 1023px){
     .right{
         display: none;
+    }
+
+    .left{
+        width: 100%;
     }
 
     .container{
@@ -22,7 +26,7 @@
         justify-content: center;
     }
 
-    .company img{
+    .logo{
         width: 10%;
         height: 10%;
     }
