--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ a{
 hr{
     margin: 10px;
     border: 1px solid #45A29E;
+    background-color: #45A29E;
 }
 
 h1{
@@ -135,6 +136,7 @@ h1, p{
 .line{
     width: 45px;
     border: 1px solid #66FCF1;
+    background-color: #66FCF1;
     position: absolute;
 }
 
