--- a/responsive.css
+++ b/responsive.css
@@ -7,7 +7,7 @@
         width: 100%;
     }
     
-    .intro, .about, .featured, .experience, .education, .skills{
+    .intro, .about, .featured, .experience, .education, .skills, .contact{
         width: 90vw;
     }
 
