--- a/style.css
+++ b/style.css
@@ -1,155 +1,842 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Macondo&family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
 *{
     margin: 0;
     padding: 0;
-}
-
-body{
-    background: url("bg.jfif");
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-a{
+    box-sizing: border-box;
     text-decoration: none;
 }
 
-hr{
-    margin: 10px;
-    border: 1px solid #45A29E;
-    background-color: #45A29E;
+html{
+    scroll-behavior: smooth;
 }
 
-h1{
-    color: white;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.max-width{
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: auto;
 }
 
-p{
-    color: #C5C6C7;
+.scroll-up-btn{
+    position: fixed;
+    height: 45px;
+    width: 42px;
+    background: #4287f5;
+    right: 30px;
+    bottom: 10px;
+    text-align: center;
+    line-height: 45px;
+    color: black;
+    z-index: 9999;
+    font-size: 40px;
+    border-radius: 6px;
+    border-bottom-width: 2px;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
 }
 
-.name{
-    color: #66FCF1;
+.scroll-up-btn.show{
+    bottom: 30px;
+    opacity: 1;
+    pointer-events: auto;
 }
 
-.headline{
-    color: white;
+.scroll-up-btn:hover{
+    filter: brightness(90%);
 }
 
-.scroll{
-    display: flex;
-    overflow-x: auto;
-    padding: 10px;
+.navbar{
+    position: fixed;
+    width: 100%;
+    padding: 15px 0;
+    z-index: 999;
+    font-family: 'Ubuntu', sans-serif;
 }
 
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: nowrap;
-    flex-shrink: 0;
+.navbar .menu li{
+    list-style: none;
+    display: inline-block;
 }
 
-.intro{
-    margin-top: 20px;
-    display: flex;
-    align-items: baseline;
+.navbar .logo a{
+    color: beige;
+    font-size: 35px;
+    font-weight: 600;
 }
 
-.intro, .about, .featured, .experience, .education, .skills, .contact{
-    width: 60vw;
-    margin-bottom: 10px;
-    background: #1F2833;
-    border-radius: 5px;
+.navbar .logo a span{
+    color: #4287f5;
 }
 
-.intro p, .about p, .skills p{
-    margin-bottom: 10px;
+.navbar.sticky .logo a span{
+    color:red;
 }
 
-.profile img{
-    border: 4px solid #45A29E;
-    border-radius: 100px;
-    margin: 10px 20px;
+.navbar .menu li a{
+    color: beige;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 25px;
+    transition: #4287f5 0.45s ease;
 }
 
-.right{
-    margin-left: 200px;
+.navbar .menu li a:hover{
+    color: #4287f5;
 }
 
-.current, .grad{
-    display: flex;
-    align-items: center;
-}
-
-.current img, .grad img{
-    width: 10%;
-}
-
-h1, p{
-    margin-left: 20px;
-    margin-right: 20px;
-    font-family: 'Open Sans', sans-serif;
-}
-
-.featuredItem{
-    display: flex;
-    flex-direction: column;
-    border: 2px solid #45A29E;
-    border-radius: 7.5px;
-    max-width: 250px;
-    margin: 5px;
-    background: white;
-    height: 300px;
-}
-
-.featuredItem img{
-    object-fit: contain;
-    margin-top: 20px;
-    height: 150px;
-}
-
-.featuredItem p{
-    color: #0B0C10;
-}
-
-.bold{
-    font-weight: bold;
-}
-
-.company, .role, .school, .info{
+.navbar .max-width{
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
-.details{
-    margin-bottom: 10px;
+.navbar .logo a{
+    color: beige;
 }
 
-.logo{
-    width: 5%;
-    height: 5%;
-    margin: auto 30px;
+.navbar.sticky{
+    padding: 15px 0;
+    background-color: #4287f5;
+    transition: all 0.4s ease-in-out;
 }
 
-.line{
-    width: 45px;
-    border: 1px solid #66FCF1;
-    background-color: #66FCF1;
+.navbar.sticky .logo a{
+    color: black;
+}
+
+.navbar.sticky .menu-btn{
+    padding: 15px 0;
+    color: black;
+}
+
+.navbar.sticky .menu li a:hover{
+    color: red;
+}
+
+.home{
+    display: flex;
+    background: url(banner.jpg) no-repeat center;
+    height: 100vh;
+    color: beige;
+    min-height: 500px;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.home .max-width{
+    width: 100%;
+    display: flex;
+}
+
+.home .home-content .text-1{
+    font-size: 27px;
+}
+
+.home .home-content .text-2{
+    font-size: 75px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+
+.home .home-content .text-3{
+    font-size: 40px;
+    margin-left: 5px 0;
+}
+
+.home .home-content .text-3 span{
+    color: lime;
+    font-weight: 600;
+}
+
+.home .home-content a{
+    display: inline-block;
+    background: #4287f5;
+    color: black;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    font-weight: 400;
+    border-radius: 6px;
+    border: 2px solid #4287f5;
+    transition: all 0.3s ease;
+}
+
+.home .home-content a:hover{
+    color: #4287f5;
+    background: none;
+}
+
+/* About section styling*/
+section{
+    padding: 100px 0;
+}
+
+.about{
+    font-family: 'Poppins',sans-serif;
+}
+
+.about .about-content .left img{
+    height: 500px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.about .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu',sans-serif;
+}
+
+.about .title::before{
+    content: "";
     position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 200px;
+    height: 3px;
+    background: black;
+    transform: translate(-50%);
 }
 
-.circle{
-    height: 10px;
-    width: 10px;
-    border: 1px solid #66FCF1;
-    background-color: #66FCF1;
-    border-radius: 100px;
-    margin: auto 45px;
+.about .title::after{
+    content: "who i am";
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    font-size: 20px;
+    color: #4287f5;
+    padding: 5px;
+    background: black;
+    border-radius: 6px;
+    transform: translate(-50%);
+}
+
+.about .about-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.about .about-content .left{
+    width: 45%;
+}
+
+.about .about-content .right{
+    width: 55%;
+}
+
+.about .about-content .right .text{
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.about .about-content .right .text span{
+    color: lime;
+}
+
+.about .about-content .right .text p{
+    text-align: justify;
+}
+
+.about .about-content .right a{
+    display: inline-block;
+    background: #4287f5;
+    color: black;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    font-weight: 400;
+    border-radius: 6px;
+    border: 2px solid #4287f5;
+    transition: all 0.3s ease;
+    font-family: 'Ubuntu',sans-serif;
+    font-weight: 400;
+}
+
+.about .about-content .right a:hover{
+    color: black;
+    background: none;
+}
+
+/* Service section styling*/
+section{
+    padding: 100px 0;
+}
+
+.services{
+    font-family: 'Poppins',sans-serif;
+    background: #222;
+}
+
+.services .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu',sans-serif;
+    color: lime;
+}
+
+.services .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 200px;
+    height: 3px;
+    background: white;
+    transform: translate(-50%);
+}
+
+.services .title::after{
+    content: "what i provide";
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    font-size: 20px;
+    color: black;
+    padding: 5px;
+    background: #4287f5;
+    border-radius: 6px;
+    transform: translate(-50%);
+}
+
+.services .serv-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.services .serv-content .card{
+    width: calc(33% - 20px);
+    background-color: beige;
+    text-align: center;
+    border-radius: 6px;
+    padding: 20px 25px;
+    cursor: pointer;
+}
+
+.services .serv-content .card:hover{
+    background: #4287f5;
+    color: black;
+}
+
+.services .serv-content .card .box{
+    transition: all 0.3s ease;
+}
+
+.services .serv-content .card:hover .box{
+    transform: scale(1.05);
+}
+
+.services .serv-content .card i{
+    font-size: 50px;
+    color: lime;
+    transition: color 0.3s ease;
+}
+
+.services .serv-content .card:hover i{
+    color: black;
+}
+
+.services .serv-content .card .text{
+    font-size: 25px;
+    font-weight: 700;
+    margin: 10px 0 7px 0;
+    color: black;
+}
+
+.services .serv-content .card .text p{
+    color:black;
+    font-weight: 600;
+}
+
+/* Skills section styling*/
+section{
+    padding: 100px 0;
+}
+
+.skills{
+    font-family: 'Poppins',sans-serif;
+    
+}
+
+.skills .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu',sans-serif;
+}
+
+.skills .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 200px;
+    height: 3px;
+    background: black;
+    transform: translate(-50%);
+}
+
+.skills .title::after{
+    content: "what i know";
+    position: absolute;
+    bottom: -15px;
+    left:50%;
+    font-size: 20px;
+    color: #4287f5;
+    padding: 5px;
+    border-radius: 6px;
+    background: black;
+    transform: translate(-50%);
+}
+
+.skills .skills-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skills .skills-content .left .text{
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .left .text span{
+    color: lime;
+}
+
+.skills .skills-skills .left .text p{
+    text-align: justify;
+}
+
+.skills .skills-content .left a{
+    display: inline-block;
+    background: #4287f5;
+    color: black;
+    font-size: 25px;
+    padding: 12px 36px;
+    margin-top: 20px;
+    font-weight: 500;
+    border-radius: 6px;
+    border: 2px solid #4287f5;
+    transition: all 0.3s ease;
+    font-family: 'Ubuntu',sans-serif;
+    font-weight: 400;
+}
+
+.skills .skills-content .left a:hover{
+    color:black;
+    background: none;
+}
+
+
+.skills .skills-content .column{
+    width: calc(50% - 33px);
+}
+
+.skills .skills-content .left .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.skills .skills-content .right .bars{
+    margin-bottom: 15px;
+}
+
+.skills .skills-content .right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.skills .skills-content .right .bars .info span{
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.skills .skills-content .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightslategray;
     position: relative;
 }
+
+.skills .skills-content .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left:0;
+    top:0;
+    background: lime;
+}
+
+.skills .skills-content .right .html::before{
+    width: 90%;
+}
+
+.skills .skills-content .right .css::before{
+    width: 60%;
+}
+
+.skills .skills-content .right .js::before{
+    width: 80%;
+}
+
+.skills .skills-content .right .python::before{
+    width: 99%;
+}
+
+.skills .skills-content .right .apex::before{
+    width: 95%;
+}
+
+/* Contact stlying*/
+section{
+    padding: 100px 0;
+}
+
+.contact{
+    font-family: 'Poppins',sans-serif;
+}
+
+.contact .title{
+    position: relative;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    font-family: 'Ubuntu',sans-serif;
+}
+
+.contact .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 200px;
+    height: 3px;
+    background: black;
+    transform: translate(-50%);
+}
+
+.contact .title::after{
+    content: "get in touch";
+    position: absolute;
+    bottom: -15px;
+    left:50%;
+    font-size: 20px;
+    color: #4287f5;
+    padding: 5px;
+    background: black;
+    border-radius: 6px;
+    transform: translate(-50%);
+}
+
+.contact .contact-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contact .contact-content .column{
+    width: calc(50% - 30px);
+}
+
+.contact .contact-content .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.contact .contact-content .left .icons{
+    margin: 10px 0;
+}
+
+.contact .contact-content .row{
+    display: flex;
+    height: 65px;
+    align-items: center;
+}
+
+.contact .contact-content .row .info{
+    margin-left: 30px;
+}
+
+.contact .contact-content .row i{
+    font-size: 25px;
+    color: red;
+}
+
+.contact .contact-content .info .head{
+    font-weight: 500;
+}
+
+.contact .contact-content .info .sub-title{
+    color: #333;
+}
+
+.contact .right form .fields{
+    display: flex;
+}
+
+.contact .right form .field,
+.contact .right form .fields .field{
+    height: 45px;
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.contact .right form .textarea{
+    height: 80px;
+    width: 100%;
+}
+
+.contact .right form .name{
+    margin-right: 10px;
+}
+
+.contact .right form .field input,
+.contact .right form .textarea textarea{
+    height: 100%;
+    width: 100%;
+    border: 1px solid lightgrey;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Poppins', sans-serif;
+    transition: all 0.3s ease;
+}
+
+.contact .right form .field input:focus,
+.contact .right form .textarea textarea:focus{
+    border-color: #b3b3b3;
+}
+
+.contact .right form .textarea textarea{
+  padding-top: 10px;
+  resize: none;
+}
+
+.contact .right form .button-area{
+  display: flex;
+  align-items: center;
+}
+
+.right form .button-area button{
+  color: #4287f5;
+  display: block;
+  width: 160px!important;
+  height: 45px;
+  outline: none;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 6px;
+  cursor: pointer;
+  flex-wrap: nowrap;
+  background: #4287f5;
+  border: 2px solid #4287f5;
+  transition: all 0.3s ease;
+  color: black;
+}
+
+.right form .button-area button:hover{
+  color: black;
+  background: none;
+}
+
+/* footer section styling */
+footer{
+    background: #111;
+    padding: 15px 23px;
+    color: #fff;
+    text-align: center;
+    font-family: 'Poppins',sans-serif;
+}
+
+footer span a{
+    color: #4287f5;
+    text-decoration: none;
+}
+
+footer span a:hover{
+    text-decoration: underline;
+}
+
+/* responsive media query start */
+@media (max-width: 1104px) {
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media (max-width: 991px) {
+    .max-width{
+        padding: 0 50px;
+    }
+}
+
+@media (max-width: 947px){
+    .menu-btn{
+        display: block;
+        z-index: 999;
+    }
+
+    .menu-btn i.active:before{
+        content: "\f00d";
+    }
+
+    .navbar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: #111;
+        text-align: center;
+        padding-top: 80px;
+        transition: all 0.3s ease;
+    }
+
+    .navbar .menu.active{
+        left: 0;
+    }
+
+    .navbar .menu li{
+        display: block;
+    }
+
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+
+    .home .home-content .text-2{
+        font-size: 70px;
+    }
+
+    .home .home-content .text-3{
+        font-size: 35px;
+    }
+
+    .home .home-content a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+
+    .max-width{
+        max-width: 930px;
+    }
+
+    .about .about-content .column{
+        width: 100%;
+    }
+
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+
+    .about .about-content .right{
+        flex: 100%;
+    }
+
+    .services .serv-content .card{
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
+
+    .skills .skills-content .column,
+    .contact .contact-content .column{
+        width: 100%;
+        margin-bottom: 35px;
+    }
+}
+
+@media (max-width: 690px) {
+    .max-width{
+        padding: 0 23px;
+    }
+
+    .home .home-content .text-2{
+        font-size: 60px;
+    }
+
+    .home .home-content .text-3{
+        font-size: 32px;
+    }
+
+    .home .home-content a{
+        font-size: 20px;
+    }
+
+    .services .serv-content .card{
+        width: 100%;
+    }
+}
+
+@media (max-width: 500px) {
+    .home .home-content .text-2{
+        font-size: 50px;
+    }
+
+    .home .home-content .text-3{
+        font-size: 27px;
+    }
+
+    .about .about-content .right .text,
+    .skills .skills-content .left .text{
+        font-size: 19px;
+    }
+
+    .contact .right form .fields{
+        flex-direction: column;
+    }
+
+    .contact .right form .name,
+    .contact .right form .email{
+        margin: 0;
+    }
+
+    .right form .error-box{
+       width: 150px;
+    }
+
+    .scroll-up-btn{
+        right: 15px;
+        bottom: 15px;
+        height: 38px;
+        width: 35px;
+        font-size: 23px;
+        line-height: 38px;
+    }
+}
+
